metrics/ingress-alerts-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alerts-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-internal-clients-only@kubernetescrd
spec:
  tls:
    - hosts:
        - alerts.w386.k8s.my.lan
      secretName: alerts-vault-acme-tls
  rules:
    - host: alerts.w386.k8s.my.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alertmanager
                port:
                  number: 9093
